:fire: Remove StringBuffer and replace with StringBuilder from the CustomHtmlHandler Test